# g2o_tutorial

./: .gitignore  README.md
src/: tempcp  temph
src/g2o_example/: CMakeLists.txt  package.xml
src/g2o_example/src/: ba_synth_data.cpp  pose_adjust.cpp
src/g2o_viewer/: CMakeLists.txt  package.xml
src/g2o_viewer/src/: g2o_viewer.cpp
